Wed Jan 11 08:29:04 GMT 2012  Olly Betts <olly@survex.com>

	* tests/internaltest.cc: Test document serialisation via the public
	  API (which was added after the tests were).
	* net/serialise.h: Remove XAPIAN_VISIBILITY_DEFAULT from 
	  serialise_document() and unserialise_document().

Wed Jan 11 05:57:14 GMT 2012  Olly Betts <olly@survex.com>

	* api/replication.cc,common/,tests/unittest.cc: Move removedir() from
	  utils.{cc,h} to fileutils.{cc,h}, and remove the now empty
	  utils.{cc,h}.

Wed Jan 11 05:44:38 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/unixcmds.cc: Check return values from system() calls
	  and throw a std::string exception if non-zero.

Wed Jan 11 05:20:30 GMT 2012  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/omassert.cc,common/omassert.h,
	  common/utils.cc: Change the sense of the bool returned by
	  within_DBL_EPSILON() to match what the name suggests instead of being
	  the opposite, and change the use of it too.  Move
	  within_DBL_EPSILON() implementation from utils.cc to new file
	  omassert.cc, only compile it when assertions are on, and prototype it
	  in omassert.h rather than utils.h.

Wed Jan 11 05:09:39 GMT 2012  Olly Betts <olly@survex.com>

	* api/compactor.cc,api/replication.cc,backends/brass/,backends/chert/,
	  backends/dbfactory.cc,common/utils.cc,common/utils.h,
	  tests/api_backend.cc,tests/api_wrdb.cc,
	  tests/harness/backendmanager.cc,tests/harness/unixcmds.cc: Remove
	  std::string wrappers for C library functions from utils.h and just
	  explicitly call c_str() when we need to.  These wrappers are
	  problematic as they suppress warnings from _FORTIFY_SOURCE about
	  ignored return values, and I can't see an easy way to avoid that.

Wed Jan 11 03:35:35 GMT 2012  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/brass/brass_databasereplicator.cc,
	  backends/brass/brass_table.cc,
	  backends/chert/chert_databasereplicator.cc,